--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
   margin: 0 auto;
   scroll-behavior: smooth;
   overflow: scroll;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
 }
 
@@ -256,19 +256,31 @@ body {
   padding: 2em;
 }
 
+@media screen and (max-width: 480px) {
+  .about .contents #technologies .skills-section {
+    padding: 0;
+  }
+}
+
 .about .contents #technologies .skills-section div {
   margin-left: 5%;
+}
+
+.about .contents #technologies .skills-section div #accordion-main {
+  color: #C5FCFF;
 }
 
 .about .contents #technologies .skills-section div .accordion {
   background-color: transparent;
   cursor: pointer;
   border: none;
-  width: 400px;
   height: 60px;
   font-size: large;
   color: #5DB6FF;
   text-align: left;
+  line-height: 30px;
+  -webkit-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
 }
 
 .about .contents #technologies .skills-section div .accordion:after {
@@ -276,7 +288,7 @@ body {
   font-size: 1.5em;
   color: #5DB6FF;
   float: right;
-  margin-left: 5px;
+  margin-left: 10px;
 }
 
 .about .contents #technologies .skills-section div .active:after {
