--- a/index.scss
+++ b/index.scss
@@ -58,7 +58,7 @@ body {
     margin: 0 auto;
     scroll-behavior: smooth;
     overflow: scroll;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
 }
 
@@ -257,25 +257,35 @@ body {
                 text-align: left;
                 padding: 2em;
 
+                @media screen and (max-width: 480px) {
+                    padding: 0;
+                }
+
                 div {
                     margin-left: 5%;
+
+                    #accordion-main {
+                        color: #C5FCFF;
+      
+                    }
 
                     .accordion {
                         background-color: transparent;
                         cursor: pointer;
                         border: none;
-                        width: 400px;
                         height: 60px;
                         font-size: large;
                         color: $color5;
                         text-align: left;
+                        line-height: 30px;
+                        transition: all 0.2s ease-out;
 
                         &:after {
                             content: ' \002B'; 
                             font-size: 1.5em;
                             color: $color5;
                             float: right;
-                            margin-left: 5px;
+                            margin-left: 10px;
                         }
 
                     }
